# llm-poker

./: .gitignore  README.md  pyproject.toml  release.sh  run.py  setup.py
llm_poker/: __init__.py  cli.py  environment.py  human_player.py  llm_player.py  player.py
poker_eval/: __init__.py  cli.py  environment.py  human_player.py  llm_player.py  test.py
tests/: test_cli_and_game.py  test_json_parse.py
